Fix profile block alignment on larger screens

--- a/src/o.scss
+++ b/src/o.scss
@@ -262,10 +262,6 @@ a {
 				
 					p {
 						margin-bottom: 0;
-						
-						&:last-child {
-							margin-left: 0;
-						}
 					}
 				}
 				
